added menu items

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="text">
                 <div>
                     <h3>About our food</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p>We like simple, yet flavorful recipes and believe marinating is not to be taken lightly. We know medium-rare isn’t the only way to cook a steak, but believe it should be.Honest food and honest drinks set the foundation of our menu. While dishes have roots from all four corners of the country,our menu integrates a range of far-flung flavors from across the globe to keep palates guessing.
                     </p>
                 </div>
             </div>
@@ -56,8 +56,7 @@
             <div class="text">
                 <div>
                     <h3>Fresh Ingredients</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </p>
+                    <p>When fresh food is in season and ripe off the vine, there's nothing more delicious. People love to savor the genuine wholesomeness that comes from fresh ingredients. Fresh foods deliver a bright, lively experience that can be just as addictive as salt, sugar, or fat (but in a good way!).</p>
                 </div>
             </div>
         </section>
@@ -65,7 +64,7 @@
             <div class="text">
                 <div>
                     <h3>World-Class Chefs</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p>Our chefs aim to give you a rich experience. To explore some of the most beautiful, natural produce. To present an original cuisine where texture, purity of flavour and balance is paramount. To bring warmth and knowledge to our customers.
                     </p>
                 </div>
             </div>
