--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>HodgePodge</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/src.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link rel="shortcut icon" href="img/icons/icon.png" type="image/x-icon" />
@@ -42,28 +42,28 @@
                         <h2>Starters</h2>
                         <ul>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Fried Pickles</h3>
+                                <p>These tangy dill pickles have pop. Fried golden brown + cool ranch dipping sauce. Lip, meet zip.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Loaded  Nachos</h3>
+                                <p>Say “hola” to your taste buds. Tortilla chips + queso + cheddar jack cheese + tomatoes + cilantro + green onions + sour cream + homemade fire-roasted salsa + sliced jalapeños. Muy bueno.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Barbecued Shrimp</h3>
+                                <p>Large shrimp sautéed in reduced white wine, butter, garlic and spices. Pairs well with whitehaven, sauvignon blanc</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Mushrooms Stuffed w/ Crabmeat</h3>
+                                <p>Broiled, topped with romano cheese</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Shrimp Voodoo</h3>
+                                <p>Succulent large shrimp, lightly fried, tossed in a spicy cream sauce, served with a tangy cucumber salad. Pairs well with lyric by etude, pinot noir</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Smoked Chicken Wings</h3>
+                                <p>Competition rub, agave glaze.</p>
                             </li>
                         </ul>
                     </div>
@@ -73,28 +73,28 @@
                         <h2>Lunch</h2>
                         <ul>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Grilled Mediterranean Chicken</h3>
+                                <p>Frenched chickenbreast & drummette marinated & grilled, white bean salad withpancetta, garlic, thyme, grape tomatoes & organic kale-spinach-chard blend.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Crispy Calamari</h3>
+                                <p>Rhode Island style, oregano, garlic, cherry pepper vinaigrette.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Grilled Chicken Salad</h3>
+                                <p>Black pepper chicken, mesclun mix, endive, grain mustard vinaigrette.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Smoked Brisket Sandwich</h3>
+                                <p>Slow-smoked beef brisket, onion + peppers, provolone,chipotle mayo, toasted hoagie bun.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Steak Enchiladas w/ Mexican Street Corn</h3>
+                                <p>Grilled top sirloin, housemade enchilada sauce, sour cream, servedwith chorizo & cheese stuﬀed poblano pepper, elote-style corn.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Portabella Panini</h3>
+                                <p>Roasted marinated portabella mushrooms and red peppers, goat cheese, almond pesto, spinach, ciabatta.</p>
                             </li>
                         </ul>
                     </div>
@@ -104,28 +104,28 @@
                         <h2>Dinner</h2>
                         <ul>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Thai Sticky Ribs</h3>
+                                <p>Pork spare ribs, five spice, savoy cabbage, thai caramel.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Grilled Hanger Steak</h3>
+                                <p>Potato, onion & poblano hash, swiss chard, chipotle butter.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Seared Faroe Island Salmon</h3>
+                                <p>Cauliflower, root vegetable farrotto, honey balsamic glaze.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Old Fashion Hamburger</h3>
+                                <p>Mustard, lettuce, tomatoes, onions & pickles (No cheese).</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Tuscan Mac & Cheese</h3>
+                                <p>Cavatappi pasta topped with zesty tomato sauce, basil, Asiago cheese, garlic bread.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Moroccan Stew</h3>
+                                <p>Braised vegetables, chickpeas, raisins, currants, tomato curry, Israeli couscous.</p>
                             </li>
                         </ul>
                     </div>
@@ -197,33 +197,67 @@
         <div class="menu desserts hide" id="dessert-menu">
             <div>
                 <section>
-                    <div class="starters">
+                    <div class="pies">
                         <h1>Desserts</h1>
-                        <h2>Starters</h2>
+                        <h2>Pies</h2>
                         <ul>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Lemon Meringue</h3>
+                                <p>Slightly tart, slightly sweet, topped with a light golden meringue.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Chocolate Cream</h3>
+                                <p>Chocolate blended with our creamy vanilla custard. Topped with fresh whipped cream or fluffy meringue.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Apple</h3>
+                                <p>Tart sliced apples, sweetened and lightly-spiced with cinnamon.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Key Lime</h3>
+                                <p>The tart flavor of Key Limes, blended creamy and smooth in a graham cracker crust.</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="cakes">
+                        <h2>Cakes</h2>
+                        <ul>
+                            <li>
+                                <h3>Mint Chocolate Cake</h3>
+                                <p>Crushed thin mints, cocoa cream, chocolate ganache.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Oreo Cheesecake</h3>
+                                <p>Vanilla cheesecake with crushed oreos, chocolate whipped cream, oreo cookie crust.</p>
                             </li>
                             <li>
-                                <h3>BBQ Plate</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h3>Leaning Tower of Chocolate Cake</h3>
+                                <p>Six layers of chocolate cake, dark fudge, sweet chocolate frosting, vanilla ice cream, a chocolate drizzle</p>
+                            </li>
+                            <li>
+                                <h3>Chocolate Mousse</h3>
+                                <p>Milk chocolate mousse, whipped cream, chocolate shavings.</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="ice cream">
+                        <h2>Ice Cream & Milkshakes</h2>
+                        <ul>
+                            <li>
+                                <h3>Hot Fudge Sundae</h3>
+                                <p>Topped with Whipped Cream and Almonds.</p>
+                            </li>
+                            <li>
+                                <h3>Godiva® Chocolate Brownie Sundae</h3>
+                                <p>Our own Fabulous Godiva Chocolate Brownie, Vanilla Ice Cream, Hot Fudge, Whipped Cream and Toasted Almonds.</p>
+                            </li>
+                            <li>
+                                <h3>Berries & Cream Sundae</h3>
+                                <p> Creamy vanilla ice cream, lightly sweetened fresh seasonal berries, topped with whipped cream, mint sprig.</p>
+                            </li>
+                            <li>
+                                <h3>Milkshakes</h3>
+                                <p>Vanilla, Strawberry or Chocalate.</p>
                             </li>
                         </ul>
                     </div>
