--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>HodgePodge</title>
-    <link rel="stylesheet" type="text/css" href="css/src.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link rel="shortcut icon" href="img/icons/icon.png" type="image/x-icon" />
