--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>HodgePodge</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
     <link rel="shortcut icon" href="img/icons/icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -74,20 +74,20 @@
         <section class="stuff">
             <div class="catering">
                 <h3>Catering</h3>
-                <img src="img/food1.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <img src="img/catering.jpg">
+                <p>Come for the food, stay for the live entertainment. From music to poetry, we are host to an eclectic array of entertainers and events appealing to young and old.
                 </p>
             </div>
             <div class="events">
                 <h3>Events</h3>
-                <img src="img/food2.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <img src="img/events.jpg">
+                <p>Come for the food, stay for the live entertainment. From music to poetry, we are host to an eclectic array of entertainers and events appealing to young and old.
                 </p>
             </div>
             <div class="drinks">
                 <h3>Drinks</h3>
-                <img src="img/food3.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <img src="img/drinks.jpg">
+                <p>Our premium bar features innovative cocktails crafted by our expert bartenders, an impressive wine selection, and a range of craft, domestic and imported beers to assure we’re stocked to satisfy every taste.
                 </p>
             </div>
         </section>
