moved javscript from inline to external

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <a href="menu.html" class="links">Menu</a>
             <a href="story.html" class="links">Our Story</a>
             <a href="contact.html" class="links">Contact</a>
-            <button class="button" onclick="openNav()">&equiv;</button>
+            <button class="button" id="button">&equiv;</button>
         </nav>
         <nav id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#" class="closebtn" id="close">&times;</a>
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="story.html">Our Story</a>
